--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     ]
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.3.0",
     "next": "12.0.10",
     "next-pwa": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "5.3.3"
+    "react-hook-form": "^7.34.0",
+    "react-input-mask": "^3.0.0-alpha.2",
+    "styled-components": "5.3.3",
+    "styled-icons": "^10.45.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "6.4.17",
@@ -39,6 +43,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.27",
+    "@types/react-input-mask": "^3.0.1",
     "@types/styled-components": "^5.1.21",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
