--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@testing-library/user-event": "^14.3.0",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "next": "12.0.10",
     "next-pwa": "^5.3.1",
     "react": "17.0.2",
