--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.34.0",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-lottie": "^1.2.3",
     "styled-components": "5.3.3",
     "styled-icons": "^10.45.0"
   },
@@ -46,6 +47,7 @@
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.27",
     "@types/react-input-mask": "^3.0.1",
+    "@types/react-lottie": "^1.2.6",
     "@types/styled-components": "^5.1.21",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
