--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-input-mask": "^3.0.0-alpha.2",
     "react-lottie": "^1.2.3",
     "styled-components": "5.3.3",
-    "styled-icons": "^10.45.0"
+    "styled-icons": "^10.45.0",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "6.4.17",
