--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@testing-library/user-event": "^14.3.0",
+    "dayjs": "^1.11.4",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "next": "12.0.10",
