--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.4",
     "next": "12.0.10",
     "next-pwa": "^5.3.1",
+    "notistack": "^3.0.0-alpha.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.34.0",
