--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/user-event": "^14.3.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.4",
+    "framer-motion": "^7.3.2",
     "next": "12.0.10",
     "next-pwa": "^5.3.1",
     "next-seo": "^5.5.0",
