--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dayjs": "^1.11.4",
     "framer-motion": "^7.3.2",
     "next": "12.0.10",
+    "next-auth": "^4.10.3",
     "next-pwa": "^5.3.1",
     "next-seo": "^5.5.0",
     "notistack": "^3.0.0-alpha.2",
